--- a/servertime/servertime/servertime.csproj
+++ b/servertime/servertime/servertime.csproj
@@ -65,7 +65,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="JavaScriptFile.js" />
     <Content Include="ServerTimePage.aspx" />
+    <Content Include="styles.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
